# SDG

./: .gitignore  .gitmodules  CMakeLists.txt  CodeGuidelines.txt  TODO.txt
lib/: CMakeLists.txt
lib/fmodstudio/: version.txt
src/ContentPipe/: CMakeLists.txt  ContentCache.cpp  ContentCache.h  SDG_ContentPipe.cpp
src/Engine/: CMakeLists.txt  Debug.h  Engine.cpp  Engine.h  EntryPoint.cpp  Exceptions.h  Filesys.h  Graphics.h  Input.h  Math.h  Platform.h  SDG.h
src/Engine/Audio/: AudioChannel.cpp  AudioChannel.h  AudioEngine.cpp  AudioEngine.h
src/Engine/Debug/: Assert.cpp  Assert.h  Log.cpp  Log.h  LogImpl.h  Performance.cpp  Performance.h  Trace.h
src/Engine/Dynamic/: Array.cpp  Array.h  Object.cpp  Object.h  Struct.cpp  Struct.h
src/Engine/Exceptions/: AssertionException.cpp  AssertionException.h  DivisionByZeroException.h  DomainException.h  Exception.h  FileLoadingException.h  Fwd.cpp  InvalidArgumentException.cpp  InvalidArgumentException.h  LogicException.h  NullReferenceException.h  OutOfRangeException.cpp  OutOfRangeException.h  RuntimeException.h  UncaughtCaseException.h  XMLReaderException.cpp  XMLReaderException.h  XmlException.h  XmlFormattingException.h  XmlValidationException.cpp  XmlValidationException.h
src/Engine/Filesys/: File.cpp  File.h  Filesys.cpp  Filesys.h  Json.cpp  Json.h  Path.cpp  Path.h
src/Engine/Game/: AssetMgr.cpp  AssetMgr.h  Component.h  ComponentList.cpp  Scene.cpp  Scene.h  ServiceProvider.h  ServiceProvider.inl
src/Engine/Graphics/: Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  Font.cpp  Font.h  Frame.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h  Tileset.h  Window.cpp  Window.h  WindowMgr.cpp  WindowMgr.h
src/Engine/Input/: Button.cpp  Gamepad.cpp  Gamepad.h  Input.cpp  Input.h  Keyboard.cpp  Mouse.cpp  Mouse.h
src/Engine/Lib/: Algorithm.h  Array.h  Array.inl  Buffer.cpp  Buffer.h  Concepts.h  ConstRAIterator.h  Delegate.h  Delegate.inl  Endian.cpp  Endian.h  Enum.h  FixedPool.h  FixedPool.inl  Int.h  Memory.h  Platform.cpp  Pool.h  Pool.inl  PoolID.h  RAIterator.h  Ref.h  Ref.inl  Shared.h  Shared.inl  String.cpp  String.h  String.inl  StringView.cpp  StringView.h  StringView.inl  Swap.h  TypeTraits.h  Unique.h  Version.cpp  Version.h
src/Engine/Logic/: DynamicState.h  DynamicStateMachine.h
src/Engine/Math/: Intersection.h  Math.cpp  Math.h  MathConstants.h  MathShape.cpp  Matrix4x4.cpp  Matrix4x4.h  Rand.cpp  Rectangle.h  Rectangle.inl  Tween.cpp  Tween.h  Tweener.h  Vector2.h  Vector3.h
src/Engine/Time/: AppTime.cpp  AppTime.h  Chronogram.h  Duration.cpp  TimeUnit.cpp  Timer.cpp  Timer.h
src/SDG/: App.cpp  App.h  AssetMgr.cpp  AssetMgr.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ClassAttr.h  ClassMacros.h  CodingStyle.txt  ContentMgr.cpp  ContentMgr.h  Crypto.cpp  Crypto.h  Debug.h  Debug.hpp  Engine.cpp  Engine.h  EntryPoint.cpp  Events.h  Exceptions.hpp  FileSys.cpp  FileSys.h  FileSys.hpp  Game.cpp  Game.h  GameTime.cpp  GameTime.h  Graphics.h  Graphics.hpp  Input.cpp  Input.h  Input.hpp  Logging.cpp  Logging.h  Math.h  Math.hpp  Memory.h  Platform.h  Position.h  (+16 more)
src/SDG/Debug/: Assert.cpp  Assert.h  Log.cpp  Log.h  LogImpl.h  Logging.cpp  Logging.h  LoggingImpl.h  Trace.h
src/SDG/Entities/: Component.h  Entity.h
src/SDG/Events/: Delegate.h
src/SDG/Exceptions/: AssertionException.cpp  AssertionException.h  DivisionByZeroException.h  Exception.cpp  Exception.h  ExceptionExample.cpp  ExceptionExample.h  Fwd.cpp  Fwd.h  InvalidArgumentException.cpp  InvalidArgumentException.h  NullReferenceException.cpp  NullReferenceException.h  OutOfRangeException.cpp  OutOfRangeException.h  RuntimeException.h  UncaughtCaseException.h  XMLReaderException.cpp  XMLReaderException.h  XmlFormattingException.h  XmlValidationException.cpp  XmlValidationException.h
src/SDG/FileSys/: File.cpp  File.h  FileInfo.h  FileSys.cpp  FileSys.h  IO.cpp  IO.h  Path.cpp  Path.h  XMLReader.cpp  XMLReader.h  Xml.hpp  XmlAttribute.cpp  XmlAttribute.h  XmlDocument.cpp  XmlDocument.h  XmlElement.cpp  XmlElement.h  XmlLoadable.cpp  XmlLoadable.h  XmlValidation.h
src/SDG/Game/: AppConfig.cpp  AppConfig.h  AssetMgr.cpp  AssetMgr.h  Component.h  ComponentList.h  Entity.cpp  Entity.h  ServiceProvider.h
src/SDG/Graphics/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  Flip.cpp  Flip.h  Font.cpp  Font.h  FontCache.h  Frame.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsMgr.cpp  GraphicsMgr.h  RenderTarget.cpp  RenderTarget.h  RendererType.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TrueTypeFont.cpp  TrueTypeFont.h  Window.cpp  Window.h  WindowMgr.cpp  WindowMgr.h
src/SDG/Input/: Button.cpp  Button.h  Gamepad.cpp  Gamepad.h  GamepadType.h  Input.cpp  Input.h  InputComponent.h  Key.h  Keyboard.cpp  Keyboard.h  MButton.h  Mouse.cpp  Mouse.h
src/SDG/Lib/: Algorithm.h  Array.h  Array.inl  Buffer.cpp  Buffer.h  ConstRAIterator.h  Delegate.h  Delegate.inl  Endian.cpp  FixedPool.h  FixedPool.inl  Memory.h  Platform.cpp  Pool.h  Pool.inl  RAIterator.h  Ref.h  Ref.inl  Shared.h  Shared.inl  String.cpp  String.h  String.inl  StringView.cpp  StringView.h  TypeTraits.h  Unique.h  Version.cpp  Version.h
src/SDG/Logic/: DynamicState.cpp  DynamicState.h  DynamicStateMachine.cpp  DynamicStateMachine.h
src/SDG/Math/: Circle.h  Endian.cpp  Endian.h  Intersection.h  Math.cpp  Math.h  MathConstants.h  MathEx.cpp  MathEx.h  MathShape.cpp  MathShape.h  Matrix4x4.cpp  Matrix4x4.h  Rand.cpp  Rand.h  Rectangle.h  Shape.cpp  Shape.h  Tween.cpp  Tween.h  TweenFunctions.cpp  TweenFunctions.h  Tweener.cpp  Tweener.h  Vector2.h  Vector3.h
src/SDG/Templates/: Array.h  (+5 more)
src/Sandbox/: CMakeLists.txt  Sandbox.cpp
src/Test/: CMakeLists.txt  CryptoTest.h  DelegateTests.h  MatrixTests.h  PathTests.cpp  SDG_Tests.cpp
src/Tests/: CMakeLists.txt  Tests Todo.txt  Todo.txt
(+213 files in other folders)
